charts/synapse/scripts/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 2147483648
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 50000
  actions:
    - name: "envoy.overload_actions.shrink_heap"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.95
    - name: "envoy.overload_actions.stop_accepting_requests"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.98

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              httpd:
                connection_limit: 49000

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/(sync|events|initialSync|rooms/[^/]+/initialSync)(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-user-hash
                            hash_policy:
                              - header:
                                  header_name: X-Hash-Key
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: whoami_hash
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/unstable/org\.matrix\.simplified_msc3575/sync(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-user-hash
                            hash_policy:
                              - header:
                                  header_name: X-Hash-Key
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: whoami_hash
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/.*(?:%21|!)[A-Za-z0-9._=/-]+(?::|%3[Aa])[A-Za-z0-9.-]+.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-room-hash
                            hash_policy:
                              - header:
                                  header_name: X-Hash-Key
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: room_hash
                        # Encryption and room-key APIs
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/room_keys/.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/keys/(query|changes|claim|room_keys/).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        # MSC3814 dehydrated-device APIs
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/unstable/org\.matrix\.msc3814\.v1/dehydrated_device(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/unstable/org\.matrix\.msc3814\.v1/dehydrated_device/[^/]*/events(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        # Login, registration, account, and profile APIs
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/login.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/register(/available|/m\.login\.registration_token/validity)?(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/password_policy.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/profile.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/account/(3pid|whoami|deactivate).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        # Room-scoped client APIs handled by client readers
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/joined_members.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/members.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/state.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/hierarchy.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/aliases.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/timestamp_to_event.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/context/.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(relations/|event/).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(redact|send|state/).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(join|invite|leave|ban|unban|kick).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        # Generic client discovery and lookup APIs
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/(createRoom|publicRooms|versions|joined_rooms|search|capabilities).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/voip/turnServer.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/directory/room/.*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/(api/v1|r0|v3|unstable)/user/.*/filter(/|$).*$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        # MatrixRTC transport discovery
                        - match:
                            safe_regex:
                              regex: '^/_matrix/client/unstable/org\.matrix\.msc4143/rtc/transports(?:\?.*)?$'
                          route:
                            timeout: 300s
                            auto_host_rewrite: true
                            cluster: httpd-client-reader
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: "not found\n"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: unmatched_route_log
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string: |
                          function envoy_on_request(request_handle)
                            return
                          end
                      source_codes:
                        whoami_hash:
                          inline_string: |
                            package.path = package.path .. ";/usr/lib/?.lua"
                            local synapse = require("synapse")

                            function envoy_on_request(request_handle)
                              local headers = request_handle:headers()
                              local hash_key = synapse.get_user_identifier_from_request(request_handle, {
                                whoami_cluster = "httpd-client-reader",
                                whoami_path = "/_matrix/client/v3/account/whoami",
                                cache_ttl_seconds = 300,
                                timeout_ms = 5000,
                                logging_enabled = false,
                                logging_token_length = 8
                              })

                              if hash_key ~= nil then
                                headers:add("X-Hash-Key", hash_key)
                                return
                              end

                              headers:add("X-Hash-Key", headers:get("x-request-id"))
                            end
                        room_hash:
                          inline_string: |
                            package.path = package.path .. ";/usr/lib/?.lua"
                            local synapse = require("synapse")

                            function envoy_on_request(request_handle)
                              local headers = request_handle:headers()
                              local hash_key = synapse.get_room_id_from_request(headers)

                              if hash_key ~= nil then
                                headers:add("X-Hash-Key", hash_key)
                                return
                              end

                              headers:add("X-Hash-Key", headers:get("x-request-id"))
                            end
                        unmatched_route_log:
                          inline_string: |
                            function envoy_on_request(request_handle)
                              local headers = request_handle:headers()
                              request_handle:logWarn(
                                "synapse_envoy_unmatched_route: method="
                                .. tostring(headers:get(":method"))
                                .. " path="
                                .. tostring(headers:get(":path"))
                                .. " authority="
                                .. tostring(headers:get(":authority"))
                              )
                            end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: httpd-client-reader
      connect_timeout: 0.02s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: LEAST_REQUEST
      least_request_lb_config:
        choice_count: 2
      outlier_detection:
        consecutive_5xx: 5
        consecutive_gateway_failure: 5
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
          - priority: HIGH
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
      load_assignment:
        cluster_name: httpd-client-reader
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: synapse-client-reader-headless
                      port_value: 8008
    - name: httpd-room-hash
      connect_timeout: 0.02s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: RING_HASH
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
          - priority: HIGH
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
      load_assignment:
        cluster_name: httpd-room-hash
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: synapse-client-reader-headless
                      port_value: 8008
    - name: httpd-user-hash
      connect_timeout: 0.02s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: RING_HASH
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
          - priority: HIGH
            max_connections: 30000
            max_requests: 8192
            max_retries: 3
      load_assignment:
        cluster_name: httpd-user-hash
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: synapse-client-reader-headless
                      port_value: 8008
